--- a/index.html
+++ b/index.html
@@ -97,27 +97,57 @@
                 <h3 class="projects-heading">Your Projects</h3>
                 <div class="project-item">
                     <h4>Super Cool Project</h4>
-                    <p>Sed tempus nibh purus, id tempor urna lobortis sit amet. Aliquam ullamcorper quam ut odio tincidunt elementum. Donec ultrices fermentum tincidunt. Curabitur iaculis malesuada mi, a malesuada nunc tempus eget. Maecenas placerat bibendum ipsum, id vehicula purus varius non. Maecenas non dignissim nibh.</p>
+                    <p>Sed tempus nibh purus, id tempor urna lobortis sit amet. Aliquam ullamcorper quam ut odio tincidunt elementum. Donec ultrices fermentum tincidu.</p>
+                    <div class="project-item-icons">
+                        <a href="#"><img src="img/star-plus.svg" alt=""></a>
+                        <a href="#"><img src="img/eye-plus-outline.svg" alt=""></a>
+                        <a href="#"><img src="img/source-fork.svg" alt=""></a>
+                    </div>
                 </div>
                 <div class="project-item">
                     <h4>Less Cool Project</h4>
-                    <p>Etiam luctus magna ut mauris tempus, a aliquam augue rhoncus. Morbi lacinia lobortis erat. Sed porta nibh non risus porttitor, a semper diam tincidunt. Sed suscipit dictum aliquet. Sed sit amet viverra tortor. Sed diam libero, venenatis et aliquam et, consequat ut lacus. Aenean varius velit neque, egestas pretium libero ultricies at.</p>
+                    <p>Etiam luctus magna ut mauris tempus, a aliquam augue rhoncus. Morbi lacinia lobortis erat. Sed porta nibh non risus porttitor, a semper diam tincidunt. Sed.</p>
+                    <div class="project-item-icons">
+                        <a href="#"><img src="img/star-plus.svg" alt=""></a>
+                        <a href="#"><img src="img/eye-plus-outline.svg" alt=""></a>
+                        <a href="#"><img src="img/source-fork.svg" alt=""></a>
+                    </div>
                 </div>
                 <div class="project-item">
                     <h4>Impossible App</h4>
-                    <p>Proin ac sapien dictum, ultricies tellus vitae, porta est. Curabitur quis lacus a leo condimentum vestibulum. Praesent ornare odio ac rhoncus rutrum. Cras nulla diam, vehicula eu malesuada aliquet, hendrerit non purus. Morbi metus eros, dignissim a iaculis ut, venenatis a ipsum. Integer semper, purus fringilla varius molestie.</p>
+                    <p>Proin ac sapien dictum, ultricies tellus vitae, porta est. Curabitur quis lacus a leo condimentum vestibulum. Praesent ornare odio ac rhoncus rutrum. Cras.</p>
+                    <div class="project-item-icons">
+                        <a href="#"><img src="img/star-plus.svg" alt=""></a>
+                        <a href="#"><img src="img/eye-plus-outline.svg" alt=""></a>
+                        <a href="#"><img src="img/source-fork.svg" alt=""></a>
+                    </div>
                 </div>
                 <div class="project-item">
                     <h4>Easy Peasy App</h4>
-                    <p>quam elit bibendum nisl, ut lacinia elit urna eget magna. Nullam lectus orci, posuere non nisl vitae, pulvinar fringilla leo. Vivamus eleifend neque sed ante molestie, ut blandit quam cursus. In egestas ligula vitae pretium sollicitudin. Curabitur scelerisque rhoncus eleifend. Aenean eget enim sed orci aliquam maximus.</p>
+                    <p>quam elit bibendum nisl, ut lacinia elit urna eget magna. Nullam lectus orci, posuere non nisl vitae, pulvinar fringilla leo. Vivamus eleifend neque sed ante molestie.</p>
+                    <div class="project-item-icons">
+                        <a href="#"><img src="img/star-plus.svg" alt=""></a>
+                        <a href="#"><img src="img/eye-plus-outline.svg" alt=""></a>
+                        <a href="#"><img src="img/source-fork.svg" alt=""></a>
+                    </div>
                 </div>
                 <div class="project-item">
                     <h4>Ad Blocker</h4>
-                    <p>Pellentesque facilisis neque vitae velit viverra volutpat. Mauris vestibulum, velit sit amet pretium ultricies, diam sem interdum nulla, eget ullamcorper urna lacus nec justo. Curabitur quis turpis urna.</p>
+                    <p>Pellentesque facilisis neque vitae velit viverra volutpat. Mauris vestibulum, velit sit amet pretium ultricies, diam sem interdum nulla, eget ullamcorper urna </p>
+                    <div class="project-item-icons">
+                        <a href="#"><img src="img/star-plus.svg" alt=""></a>
+                        <a href="#"><img src="img/eye-plus-outline.svg" alt=""></a>
+                        <a href="#"><img src="img/source-fork.svg" alt=""></a>
+                    </div>
                 </div>
                 <div class="project-item">
                     <h4>Money Maker</h4>
-                    <p>Morbi congue nec quam ac elementum. Proin eu erat ultrices, volutpat neque ut, ultricies metus. In nisl lacus, porttitor at nibh vel, pellentesque auctor ante. Donec sit amet elementum est. Duis venenatis, eros varius mattis accumsan, turpis libero semper dolor, eu vestibulum diam tellus eu nisi.</p>
+                    <p>Morbi congue nec quam ac elementum. Proin eu erat ultrices, volutpat neque ut, ultricies metus. In nisl lacus, porttitor at nibh vel, pellentesque auctor ante.</p>
+                    <div class="project-item-icons">
+                        <a href="#"><img src="img/star-plus.svg" alt=""></a>
+                        <a href="#"><img src="img/eye-plus-outline.svg" alt=""></a>
+                        <a href="#"><img src="img/source-fork.svg" alt=""></a>
+                    </div>
                 </div>
             </div>
             <div class="announcements">
@@ -140,28 +170,28 @@
             <div class="trending">
                 <h3 class="trending-heading">Trending</h3>
                 <div class="trending-user">
-                    <img src="img/pfp.jpeg" alt="" width="100px">
+                    <img src="img/pfp-shadow.png" alt="">
                     <div>
                         <h5>@tegan</h5>
                         <span>World Peace Builder</span>
                     </div>
                 </div>
                 <div class="trending-user">
-                    <img src="img/pfp.jpeg" alt="" width="100px">
+                    <img src="img/pfp-shadow.png" alt="">
                     <div>
                         <h5>@morgan</h5>
                         <span>Super Cool Project</span>
                     </div>
                 </div>
                 <div class="trending-user">
-                    <img src="img/pfp.jpeg" alt="" width="100px">
+                    <img src="img/pfp-shadow.png" alt="">
                     <div>
                         <h5>@Kendall</h5>
                         <span>Life Changing App</span>
                     </div>
                 </div>
                 <div class="trending-user">
-                    <img src="img/pfp.jpeg" alt="" width="100px">
+                    <img src="img/pfp-shadow.png" alt="">
                     <div>
                         <h5>@alex</h5>
                         <span>NoTraffic Maker</span>
