added a repo link

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                             <img src="img/shield-lock.svg" alt=""><a href="">Privacy</a>
                         </div>
                     </li>
+                    <li>
+                        <div class="nav-item">
+                            <img src="img/github.svg" alt=""><a href="https://github.com/Chafai-Abdelkrim/dashboard">Repo</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
